# yt-tui

./: .gitignore  Cargo.toml  README.md  config.jsonc.example
src/: app.rs  config.rs  history.rs  main.rs  player.rs
src/ui/: filters.rs  list.rs  mod.rs  search.rs  tabs.rs
src/youtube/: client.rs  mod.rs  models.rs
